--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -80,7 +80,7 @@
                             <div class="form-group" if.bind="after_upload">
                                 <help topic="after-upload" position="bottom"></help>
                             </div>
-                            <div class="form-group" if.bind="phase=='applying-to-photos' && ! got_duplicates && ! working">
+                            <div class="form-group toolbar" if.bind="phase=='applying-to-photos' && ! got_duplicates && ! working">
                                 <button 
                                     disabled.bind="params.selected_topics.length==0 && params.selected_photographers.length != 1 && params.photos_date_str == ''"
                                     class="btn btn-warning btn-md" 
@@ -92,12 +92,13 @@
                             <div class="input-group" if.bind="phase == 'selecting-photos-for-story'">
                                 <help topic.bind="phase" position="bottom"></help>
                             </div>
-                            <div if.bind="caller_type" class="form-group">
+                            <div if.bind="caller_type" class="form-group toolbar">
                                 <button class="btn btn-success" click.trigger="save_photo_group()">
                                     ${'members.back-to-' + caller_type & t}
                                 </button>
                             </div>
-                            <div if.bind="phase == 'photos-ready-to-edit' && user.privileges.PHOTO_UPLOADER && ! caller_type && ! got_duplicates && ! working" t="[title]user.upload-files" class="input-group">
+                            <div if.bind="phase == 'photos-ready-to-edit' && user.privileges.PHOTO_UPLOADER && ! caller_type && ! got_duplicates && ! working" t="[title]user.upload-files" 
+                                class="input-group toolbar">
                                 <a href click.trigger="upload_files()" class="btn btn-success cl-create-btn">
                                     <i class="far fa-plus-square"></i>
                                     ${'photos.upload' & t}
