--- a/src/stories/story-detail.html
+++ b/src/stories/story-detail.html
@@ -133,7 +133,7 @@
                 </div>
                 <!--end of justified -->
                 <div if.bind="user.editing"
-                    style="background-color:lightgray;height:570px;width:94%;margin-right:8px;margin-top:12px;">
+                    style="background-color:#eee;height:600px;width:94%;margin-right:8px;margin-top:12px;">
                     <div style="display:flex;justify-content:spacex-between;">
                         <label style="margin-top:12px;margin-right:15px;font-size:120%;">
                             ${'stories.sorting-key' & t}
@@ -149,19 +149,23 @@
                         </ul>
                     </div>
                     <div class="multi-select-div"
-                        style="margin-bottom:0px;position:relative;width:80%;margin-right:15px;height:53vh;overflow:auto;">
+                        style="margin-bottom:0px;position:relative;width:80%;margin-right:15px;overflow:auto;">
                         <div class="multi-select-div" style="margin-bottom:15px;position:relative;">
                             <div style="margin-top: 0px;margin-bottom:2px;font-size:120%">
                                 ${'stories.categories' & t}
                             </div>
                             <multi-select options.bind="topic_list" category="topic"
-                                selected_options.bind="selected_topics"
-                                option_groups.bind="topic_groups" new-name.delegate="add_topic($event)"
-                                settings.bind="options_settings" has_groups.bind="has_grouped_topics"
-                                place_holder_text="photos.click-topic"
+                                selected_options.bind="selected_topics" option_groups.bind="topic_groups"
+                                new-name.delegate="add_topic($event)" settings.bind="options_settings"
+                                has_groups.bind="has_grouped_topics" place_holder_text="photos.click-topic"
                                 ms-change.delegate="handle_topic_change($event) ">
                             </multi-select>
                         </div>
+                    </div>
+                    <div style="margin-top: 10px;margin-left:14px;margin-right:15px;width:50%;">
+                        <date-range label="stories.story-date" base_date_str.bind="story_date_str"
+                            range_options.bind="[1,2,3,5,10,15,20,30,50,100]" span_size.bind="story_date_span_size">
+                        </date-range>
                     </div>
                 </div>
             </div>
