picker. member block selection. wip.

--- a/src/members/members.html
+++ b/src/members/members.html
@@ -80,7 +80,7 @@
                         if.bind="! user.privileges.DATA_AUDITOR || ! only_unapproved || ! member.approved"
                         class="list-group-item ${member.id === $parent.selectedId ? 'active' : ''} ${not_ready(member) ? 'not_ready' : ''} ${member.selected}"
                         dir="rtl">
-                        <a click.delegate="member_clicked(member, $event)" tapandhold="500"
+                        <a click.delegate="member_clicked(member, $event, $index)" tapandhold="500"
                             longtouch.delegate="toggle_selection(member, $event)" disabled.bind="not_ready(member)"
                             style="color:black;cursor:pointer;">
                             <img src.bind="member.facePhotoURL"
