--- a/src/resources/elements/picker/picker.html
+++ b/src/resources/elements/picker/picker.html
@@ -7,18 +7,24 @@
     </div>
     <button if.bind="can_add" class="btn btn-success btn-sm cl-create-btn"
         click.delegate="dispatch_new_item_event($event)" style="width:100%;font-size:110%;">
-        ${'multi-select.add-item' & t} ${filter}
+        ${'multi-select.add-item' & t} "${filter}"
     </button>
 
     <!-- options -->
 
     <div class="options unselected ${theme.rtltr}" css="max-height:${option_list_height}px;min-height:132px;"
-        if.bind="options && options.length > 0 && (filter.length > 0 || (! settings.show_only_if_filter)) ">
+        if.bind="options && (options.length > 0 || user.editing) && (filter.length > 0 || (! settings.show_only_if_filter)) ">
         <ul css="width:${width}px;">
+            <li if.bind="option_was_selected">
+                <div class="option-item">
+                    <a click.delegate="unselect_option()">
+                        ${'picker.unselect-item' & t}
+                    </a>
+                </div>
+            </li>
             <li repeat.for="option of options | filter: filter : 'name' | spy : agent">
                 <div class="option-item" contextmenu.delegate="edit_option_dialog(option, $event)"
-                    aubs-popover="body.bind:option.description;position:right;disabled.bind:!option.description"
-                    if.bind="user.editing">
+                    aubs-popover="body.bind:option.description;position:right;disabled.bind:!option.description">
                     <a click.delegate="select_option(option)">
                         ${option.name}
                     </a>
