sorting book stories

--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -205,7 +205,7 @@
                         </form>
                     </div>
                     <div class="row" style="margin-top: 20px;margin-left:23px;"
-                        if.bind="user.debugging || user.privileges.DEVELOPER">
+                        if.bind="user.debugging || user.privileges.TESTER">
                         <picker options.bind="book_list" 
                             settings.bind="pickerSettings"
                             category="book"
