--- a/src/stories/story-detail.html
+++ b/src/stories/story-detail.html
@@ -136,7 +136,7 @@
                     style="background-color:#eee;height:600px;width:94%;margin-right:8px;margin-top:12px;">
                     <div style="display:flex;justify-content:spacex-between;">
                         <label style="margin-top:12px;margin-right:15px;font-size:120%;">
-                            ${'stories.sorting-key' & t}
+                            ${'stories.sorting-key' & t} [${book_name}]
                         </label>
                         <ul
                             style="display:flex;justify-content:spacex-evenly;flex-direction:row-reverse;margin-top:12px;">
