--- a/src/videos/videos.html
+++ b/src/videos/videos.html
@@ -22,7 +22,7 @@
                                 <button t="[title]videos.next" class="btn btn-default" click.delegate="page(+1, $event)" disabled.bind="next_disabled"><i class="fas fa-chevron-right"></i></button>
                             </div>
                             <div if.bind="phase=='photos-ready-to-edit'" class="ctrl">
-                                <button click.delegate="new_video()" class="btn btn-success cl-create-btn">
+                                <button click.delegate="new_video()" class="btn btn-success cl-create-btn" style="height:32px;margin-right:4px;">
                                     <i class="far fa-plus-square"></i>
                                     ${'videos.new' & t}
                                 </button>
@@ -70,6 +70,11 @@
                                 
                                 contenteditable="false" draggable="true">
                                 <iframe class="video-iframe" src.bind="video.src" frameborder="0" allowfullscreen="">
+                                    <style>
+                                        div.yp-title-beacon {
+                                            display: none;
+                                        }
+                                    </style>
                                 </iframe>
                                 <span class="video-name" style="margin-top:-6px;">
                                     <span>
