--- a/src/resources/elements/picker/picker.html
+++ b/src/resources/elements/picker/picker.html
@@ -15,7 +15,7 @@
     <div class="options unselected ${theme.rtltr}" css="max-height:${option_list_height}px;min-height:132px;"
         if.bind="options && (options.length > 0 || user.editing) && (filter.length > 0 || (! settings.show_only_if_filter)) ">
         <ul css="width:${width}px;">
-            <li if.bind="option_was_selected">
+            <li if.bind="option_was_selected" style="font-weight:bold;background-color:orange;">
                 <div class="option-item">
                     <a click.delegate="unselect_option()">
                         ${'picker.unselect-item' & t}
